[package]
name = "kuddelmuddel"
version = "6.6.6"
edition = "2021"
publish = false # never!

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
csv = "1.1.6"
indicatif = "0.16.2"
parity-scale-codec = "3.1.5"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.82"
subxt = "0.22.0"
tokio = { version = "1", features = ["full"] }
