[package]
name = "kuddelmuddel"
version = "6.6.6"
edition = "2021"
publish = false # never!

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
csv = "1.2.2"
futures = "0.3.28"
indicatif = "0.17.6"
parity-scale-codec = "3.6.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
subxt = "0.28.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot-sdk" }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk" }
polkadot-node-core-pvf = { git = "https://github.com/paritytech/polkadot-sdk" }
polkadot-node-core-pvf-execute-worker = { git = "https://github.com/paritytech/polkadot-sdk" }
polkadot-node-core-pvf-prepare-worker = { git = "https://github.com/paritytech/polkadot-sdk" }

sp-maybe-compressed-blob = { git = "https://github.com/paritytech/polkadot-sdk" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk" }
